--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <img src="assets/alura_logo.svg" alt="Logo de alura latam" class="logo">
+    <header>
+        <img src="assets/alura_logo.svg" alt="Logo de alura latam" class="logo">
+    </header>
     <main class="contenido">
         <div class="contenido__entrada">
             <textarea placeholder="Ingrese el texto aquí" id="contenido__entrada__input"></textarea>
